# NSOS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RUN.md  diff.txt  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml
.githooks/: pre-commit  pre-push
.github/workflows/: backend-django.yml  frontend-nuxt.yml  frontend-staging.yml
docs/: .gitignore  index.md  package.json
docs/.vitepress/: config.mts
docs/teacher/: index.md
infra/: .dockerignore  .env.example  .gitignore  .terraform.lock.hcl  README.md  api-gw.tf  docker-compose.prod.yaml  docker-compose.yaml  ecr.tf  main.tf  outputs.tf  s3.tf  secrets.tf  ses.tf  template.yaml  terraform.tf  user-data.sh  variables.tf  web-client.tf
main/: manage.py
main/aws/: s3.py  ses.py
main/chatbot/: rag_engine.py  views.py
main/core/: mixins.py  permissions.py
main/mail/: service.py
main/main/: conf.py  secrets.py  settings.py  urls.py
main/teaching/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
main/university/: admin.py  models.py  serializers.py  urls.py  views.py
main/users/: admin.py  models.py  serializers.py  urls.py  views.py
models/: .dockerignore  .gitignore  Dockerfile  docs.py  download.py  llm.py  names.py  paths.py  rag.py  requirements-tmp.txt  requirements.txt  test.py  update_docs.py  views.py
web/: .eslintcache  .gitignore  README.md  auto-imports.d.ts  components.d.ts  env.d.ts  eslint.config.ts  index.html  package.json  playwright.config.ts  tsconfig.json  typed-router.d.ts  vite.config.ts
(+483 files in other folders)
